gpkg support for input trajectories, option to remove duplicate points in output paths, clean up Matching.java, maven shade plugin for packaging.